implement 08-etl-batch: NIO2 file I/O pipeline, records/sec KPI, concurrent harness, Grafana provisioning
- Replace stub MiniHttpServer with real NIO2 ETL batch server (pure Java 21, no deps)
- POST /api/v1/etl/run: async job via virtual thread, generates 50k CsvRecords, writes/reads CSV
- NIO2 BufferedWriter/BufferedReader, stream filter+aggregate by category, output CSV
- Hand-rolled Prometheus metrics (etl_records_processed_total, batch_duration, io_bytes)
- GET /api/v1/etl/jobs and GET /api/v1/etl/{jobId}/status for job tracking
- BenchmarkHarness: concurrent ExecutorService, wall-clock throughput, real GC/RSS/CPU KPIs
- records_per_second parsed from /api/v1/etl/jobs JSON after run
- Grafana: provisioning YAML, 4-panel dashboard (records/s, batch duration, IO, JVM heap)
- app/run.sh smoke routes updated to new API paths
- Smoke test: PASS (rss_mb=106, throughput=342 rps)

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>